--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.11.0",
@@ -60,7 +59,8 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "devDependencies": {
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "postcss-normalize": "^7.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
